--- a/scoreboard-web-app/scoreboard.html
+++ b/scoreboard-web-app/scoreboard.html
@@ -56,7 +56,8 @@
     });
     $(document).ready(function () {
       // This will update the score every 2 sec (2000 millisec)
-      setInterval(updateScore, 2000);
+      //setInterval(updateScore, 2000);
+      setInterval(updateScore, 200);
     })
 
     function updateScore() {
