Added cleanup script to be run on raspberry pi for deleting stale images (older than 15 minutes). Added a new dynamodb table to store rendered filenames (necessary because there is a delay in capture/render). Externalized S3 Bucket and API Gateway url to properties file. Added variants of get_image and get_score lambda functions that return the next score if previous score is provided else the latest score.  or the next two new lambda functions. Added a new deploy_webapp.sh script that replaces tokens in html files before uploading to S3.

--- a/scoreboard-web-app/images_save_last.html
+++ b/scoreboard-web-app/images_save_last.html
@@ -31,6 +31,7 @@
     </div>
   </div>
   <div id="gg1"></div>
+  <div id="lekDiv" hidden></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Custom Javascript functions below -->
@@ -38,13 +39,13 @@
     $(document).ready(function () {
       // This will update the score every 2 sec (2000 millisec)
       //setInterval(updateScore, 2000);
-      setInterval(updateImage, 800);
+      setInterval(updateImage, 1500);
     })
 
     function updateImage() {
       $.ajax({
         type: 'GET',
-        url: 'API_URL_TOKEN/image',
+        url: 'API_URL_TOKEN/image?lek=' + getUrlParam(),
         contentType: 'application/json',
         dataType: 'json',
         success: function(response){
@@ -53,14 +54,25 @@
                 $('#gg1').text("Internal server error!");
               } else {
                 image_name = response.image;
+                lek = response.lastEvaluatedKey;
                 console.log(image_name);
-                image_url = "https://s3-us-west-2.amazonaws.com/S3_BUCKET_TOKEN/images/" + image_name;
-                var image_tag = document.getElementById('danceImage');
-                var downloadingImage = new Image();
-                downloadingImage.onload = function(){
-                  image_tag.src = this.src;
-                };
-                downloadingImage.src = image_url;
+                encodedLek = encodeURIComponent(JSON.stringify(lek))
+                console.log("Decoded lek: " + decodeURIComponent(encodedLek));
+
+                if (image_name) {
+                  image_url = "https://s3-us-west-2.amazonaws.com/S3_BUCKET_TOKEN/" + image_name;
+                  var image_tag = document.getElementById('danceImage');
+                  var downloadingImage = new Image();
+                  downloadingImage.onload = function(){
+                    image_tag.src = this.src;
+                  };
+                  downloadingImage.src = image_url;
+                }
+
+                var lekDiv = document.getElementById('lekDiv');
+                if(lek) {
+                lekDiv.innerHTML = encodeURIComponent(JSON.stringify(lek));
+                }
               }
           }
         },
@@ -71,6 +83,17 @@
         }
       })
     }
+
+    function getUrlParam() {
+      var lekDiv = document.getElementById('lekDiv');
+      var lek = lekDiv.innerHTML;
+      if (lek) {
+        return lek;
+      } else {
+        return "null";
+      }
+    }
+
   </script>
 </body>
 
