--- a/scoreboard-web-app/scoreboard.html
+++ b/scoreboard-web-app/scoreboard.html
@@ -63,7 +63,7 @@
     function updateScore() {
       $.ajax({
         type: 'GET',
-        url: 'https://chavctprx1.execute-api.us-west-2.amazonaws.com/prod/score',
+        url: 'API_URL_TOKEN',
         contentType: 'application/json',
         dataType: 'json',
         success: function(response){
