Always take the latest score and image (will miss some frames but gives the least lag)

--- a/scoreboard-web-app/scoreboard_v2_save_last.html
+++ b/scoreboard-web-app/scoreboard_v2_save_last.html
@@ -83,7 +83,7 @@
     function updateScore(gauge) {
       $.ajax({
         type: 'GET',
-        url: 'API_URL_TOKEN?lek=' + getUrlParam(),
+        url: 'API_URL_TOKEN?lek=null',
         contentType: 'application/json',
         dataType: 'json',
         success: function(response){
