Change randomize score range

--- a/scoreboard-web-app/scoreboard_v2_save_last.html
+++ b/scoreboard-web-app/scoreboard_v2_save_last.html
@@ -146,7 +146,7 @@
         min = 2000;
         max = 3000;
       }
-      return score;
+      return randomIntFromInterval(score, score + 200);
     }
 
     function randomIntFromInterval(min,max)
