Front end changes to use the new api endpoint paths for image and score

--- a/scoreboard-web-app/slideshow.html
+++ b/scoreboard-web-app/slideshow.html
@@ -47,11 +47,11 @@
         <ul>
             <li id="danceImage">
                 <a class="ns-img" id="ddrLink" href="img/3.jpg"></a>
-                <div class="caption" id="ddrCaption">Go Vegas!!!</div>
+                <!--<div class="caption" id="ddrCaption">Go Vegas!!!</div>-->
             </li>
             <li id="graphicsImage">
                 <a class="ns-img" id="graphicsLink" href="img/2.jpg"></a>
-                <div class="caption" id="graphicsCaption">Lets do it!</div>
+                <!--<div class="caption" id="graphicsCaption">Lets do it!</div>-->
             </li>
         </ul>
         <div class="navsWrapper">
