Changed api url path for retrieving scores

--- a/scoreboard-web-app/scoreboard_v2.html
+++ b/scoreboard-web-app/scoreboard_v2.html
@@ -82,7 +82,7 @@
     function updateScore(gauge) {
       $.ajax({
         type: 'GET',
-        url: 'API_URL_TOKEN/score',
+        url: 'API_URL_TOKEN/score?lek=null',
         contentType: 'application/json',
         dataType: 'json',
         success: function(response){
