--- a/scoreboard-web-app/scoreboard.html
+++ b/scoreboard-web-app/scoreboard.html
@@ -63,7 +63,7 @@
     function updateScore() {
       $.ajax({
         type: 'GET',
-        url: 'API_URL_TOKEN',
+        url: 'API_URL_TOKEN/score?lek=null',
         contentType: 'application/json',
         dataType: 'json',
         success: function(response){
