--- a/scoreboard-web-app/scoreboard_v2_save_last.html
+++ b/scoreboard-web-app/scoreboard_v2_save_last.html
@@ -83,7 +83,7 @@
     function updateScore(gauge) {
       $.ajax({
         type: 'GET',
-        url: 'API_URL_TOKEN?lek=null',
+        url: 'API_URL_TOKEN/score?lek=null',
         contentType: 'application/json',
         dataType: 'json',
         success: function(response){
